force-app/main/default/objects/JK_KycDetail__c/fields/Kyc_expDate__c.field-meta.xml
<CustomField>
    <fullName>Kyc_expDate__c</fullName>
    <label>Kyc_expDate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>