force-app/main/default/objects/JK_KycDetail__c/fields/Kyc_ifscCode__c.field-meta.xml
<CustomField>
    <fullName>Kyc_ifscCode__c</fullName>
    <label>Kyc_ifscCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>