force-app/main/default/objects/JK_KycDetail__c/fields/Kyc_remarks__c.field-meta.xml
<CustomField>
    <fullName>Kyc_remarks__c</fullName>
    <label>Kyc_remarks</label>
    <length>100</length>
    <type>Text</type>
</CustomField>