force-app/main/default/objects/JK_KycDetail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Kyc_documentType__c</columns>
    <columns>Kyc_documentNumber__c</columns>
    <columns>Kyc_nameOnDocument__c</columns>
    <columns>Kyc_remarks__c</columns>
    <columns>KycToEmp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>